v.0.0.6 Exercici_04 Esta firulais, hay que arreglarlo